added some tests, improved documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,29 @@
-streamlit
-yfinance
-pandas
-scikit-learn
-xgboost
-plotly
-matplotlib
+# Core dependencies
+streamlit>=1.28.0
+yfinance>=0.2.18
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Machine Learning
+scikit-learn>=1.3.0
+xgboost>=1.7.0
+
+# Visualization
+plotly>=5.15.0
+matplotlib>=3.7.0
+
+# Advanced ML Models (optional - install separately if needed)
+# tensorflow>=2.13.0  # For LSTM models
+# prophet>=1.1.4      # For Prophet forecasting
+
+# Development and Testing
+pytest>=7.4.0
+pytest-cov>=4.1.0
+
+# Data processing and technical indicators
+scipy>=1.11.0
+ta-lib  # Technical analysis library (optional, requires separate installation)
+
+# Additional utilities
+python-dateutil>=2.8.2
+requests>=2.31.0
